--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -9,6 +9,12 @@ body {
 	 font-family: "Open Sans", sans-serif;
 }
 
+hr{
+	display:none;
+	width:795px;
+	margin-left:25px;
+}
+
 .research_header {
 	width: 100%;
 	background-color: #6bceff;
@@ -30,9 +36,10 @@ body {
 	margin: 0 auto;		
 	position: relative;
 }
+
 #content #form_area #remote{
 	background-color: #fff;
-	height: 200px;
+	height: 194px;
 	width:50px;
 	display:inline-block;	
 	position:absolute;
@@ -66,13 +73,13 @@ body {
 	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.3);
     -moz-box-shadow:0 0 10px rgba(0, 0, 0, 0.3);
     box-shadow:0 0 10px rgba(0, 0, 0, 0.3);   
-    padding: 0 0 30px 0;
+    padding: 0 0 20px 0;
 }
 
 #content .research_content.active{
 	border-left:3px solid #0C4DA2;		
-	padding: 0 0 60px 0;
 }
+
 #content .research_content #cate_title{
 	padding:20px 20px 0 20px;	
 }
@@ -109,7 +116,7 @@ body {
 
 
 #content .research_content .item_box{	
-	padding: 20px;
+	padding: 10px 20px 0 20px;
 }
 #content .research_content .item_box .item_individual{	
 	height:40px;
@@ -136,7 +143,7 @@ body {
 	display:inline-block;
 }
 
-#content .research_content .item_box button{
+#content .research_content button{
 	background-color: #cfcfcf;
 	border:none;
 	color:#fff;
@@ -144,14 +151,18 @@ body {
 	height:33px;
 }
 
-#content .research_content .item_box .bottom_box{
+#content .research_content .bottom_box{
 	display:none;
-	position:absolute;
-	right:20px;
 	bottom:20px;
+	margin-left:80%;
+	padding: 0 20px 0 20px;
+}
+#content .research_content .active_btn{
+	display:inline-block;
 }
 
-#content .research_content .item_box .bottom_box .bottom_button_box{
+
+#content .research_content .bottom_box .bottom_button_box{
 	padding:5px;
 	display:inline-block;
 }
