--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -503,7 +503,7 @@ form {
     overflow-y: auto;
 }
 .RadioButton {
-    width: 98px;
+    width: 95px;
     margin-bottom: 8px;
     white-space: nowrap;
 }
@@ -836,6 +836,10 @@ button, input {
     background: #fff;
     -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,.15);
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.15);
+}
+
+#leftleft{
+	margin-left :  -33px;
 }
 
 
