--- a/2. 개발/FreSearch/src/main/webapp/resources/css/reset.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/reset.css
@@ -7,9 +7,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    vertical-align: top;
 }
 
-body, p, h1,
+body,
+p,
+h1,
 h2,
 h3,
 h4,
@@ -29,6 +32,7 @@ table {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border-collapse: collapse;
 }
 
 ul,
