--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -7,13 +7,24 @@ body {
 
 /* #0C4DA2 */
 
-.container {}
+.loading {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #0C4DA2;
+    color: #fff;
+    font-size: 50px;
+    z-index: 10000;
+    /* 이 값으로 레이어의 위치를 조정합니다. */
+}
 
 .container .fixed_box {
     position: fixed;
     right: 0;
     left: 0;
-    z-index: 99999;
+    z-index: 9999;
     /* width 100% = right, left: 0*/
 }
 
@@ -26,7 +37,7 @@ body {
 
 .container .fixed_box .header .upper {
     width: 100%;
-    background-color: #888;
+    background-color: #0C4DA2;
 }
 
 .container .fixed_box .header .GNB_sub {
@@ -46,13 +57,23 @@ body {
 
 .container .fixed_box .header .upper .login ul {
     float: right;
-    width: 200px;
-    border: 1px solid #111;
+    width: 180px;
+
     /* HTML login 1, 2, 3 항목에 맞게 변경 후 border:1px solid #111; 지우기  */
 }
 
 .container .fixed_box .header .upper .login li {
-    display: inline-block;  
+    display: inline-block;
+
+    /* 항목 3개라서 가로크기 32퍼씩 임시설정 */
+}
+
+.container .fixed_box .header .upper .login li a {
+    display: block;
+    padding: 4px 5px;
+    color: #fff;
+    font-size: 12px;
+
     /* 항목 3개라서 가로크기 32퍼씩 임시설정 */
 }
 
@@ -94,26 +115,29 @@ body {
 */
 #GNB {
     float: right;
-    width: 890px;
+    width: 840px;
     height: 80px;
+    text-align: right;
     font-size: 0.875em;
 }
 
 #GNB>ul {
     height: 80px;
-    text-align: right;
+    text-align: center;
     overflow: hidden;
 }
 
 #GNB>ul>li {
     display: inline-block;
+    vertical-align: top;
 }
 
 #GNB>ul>li>a {
     display: block;
-    padding: 0 43px;
+    padding: 0 53px;
     height: 80px;
     line-height: 80px;
+    font-size: 15px;
     font-weight: 600;
     background-color: #fff;
     color: rgb(80, 80, 80);
@@ -163,6 +187,8 @@ body {
     box-shadow: 0 0 0 transparent;
     border: none;
     background: transparent;
+    padding-top: 109px;
+    margin-bottom: 0;
 }
 
 .bx-wrapper .bx-controls-direction a {
@@ -176,35 +202,350 @@ body {
     z-index: 9999;
 }
 
+.bx-wrapper .bx-pager {
+    bottom: 30px;
+}
+
 .bx-wrapper .bx-pager.bx-default-pager a {
-    background: #999999;
+    background: #f1f1f1;
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a:focus {
-    background: #0c4da2;
+    background: #f1f1f1;
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a.active {
     background: #0c4da2;
 }
 
-#content {
-    clear: both;
-    float: none;   
-    background-color: #f90;
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
+    text-align: center;
+    width: 100%;
 }
 
+#content {
+    clear: both;
+    float: none;
+}
+
+#content .notice_area,
 #content .research_area,
-#content .notice_area {
+#content .qreserch_area {
     clear: both;
     float: none;
     width: 1100px;
     margin: 0 auto;
 }
 
-#content .box {
+#content .notice_back {
+    background-color: #f6f6f6;
+    border-bottom: 1px solid #d5e6e8;
+}
+
+#content .notice_area .notice,
+#content .notice_area .event {
     float: left;
-    width: 366px;
-    border: 1px solid #111;
+    width: 49%;
+    height: 40px;
+    overflow: hidden;
+    background-color: #f6f6f6;
+}
+
+#content .notice_area .notice .notice_rolling,
+#content .notice_area .event .event_rolling {
+    clear: both;
+    float: none;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+#content .notice_area .notice li,
+#content .notice_area .event li {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    text-align: left;
+}
+
+#content .notice_area .notice li a,
+#content .notice_area .event li a {
+    position: relative;
+    display: block;
+    width: 100%;
+    color: #0C4DA2;
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+#content .notice_area .notice li a span,
+#content .notice_area .event li a span {
+    display: inline-block;
+    color: #333;
+    font-weight: 400;
+}
+
+#content .notice_area .notice li a .notice_date,
+#content .notice_area .event li a .event_date {
+    position: absolute;
+    right:7px;
+    font-size: 13px;
+    color:#777;
+}
+
+#content .research_area {
+    padding: 40px 0;
+
+}
+
+/* hot_으로 시작하는 div class > hot_search hot_chart hot_board */
+#content .research_area div[class^="hot_"] {
+    float: left;
+    width: 365px;
+    height: 190px;
+    border-top: 1px solid #dcdcdc;
+    border-right: 1px solid #dcdcdc;
+    border-bottom: 1px solid #dcdcdc;
+}
+
+#content .research_area .hot_board {
+    border-left: 1px solid #dcdcdc;
+}
+
+/* _icon으로 끝나는 div class > search_icon chart_icon board_icon */
+#content .research_area div[class$="_icon"] {
+    display: inline-block;
+    width: 142px;
+    padding-top: 28px;
+    padding-left: 24px;
+}
+
+#content .research_area div[class$="_icon"] img {
+    width: 142px;
+
+}
+
+/* _text으로 시작하는 div class > search_text chart_text board_text */
+#content .research_area div[class$="_text"] {
+    display: inline-block;
+    width: 198px;
+    padding-top: 28px;
+    padding-left: 18px;
+
+}
+
+#content .research_area div[class$="_text"] dl {
+    display: block;
+    text-align: center;
+}
+
+#content .research_area div[class$="_text"] dl dt {
+    font-size: 18px;
+    font-weight: bold;
+    color: #505050;
+    margin: 9px 0;
+}
+
+#content .research_area div[class$="_text"] dl dd {
+    font-size: 15px;
+    color: #505050;
+    margin: 0 0 10px;
+    line-height: 12px;
+}
+
+#content .research_area div[class$="_text"] dl a {
+    display: block;
+    width: 70%;
+    padding: 4px 0;
+    margin: 18px auto;
+    font-size: 15px;
+    font-weight: bold;
+    color: #0C4DA2;
+    background: #fff;
+    border: 2px solid #0C4DA2;
+    border-radius: 20px;
+    transition: all 0.3s;
+}
+
+#content .research_area div[class$="_text"] dl a:hover,
+#content .research_area div[class$="_text"] dl a:focus {
+    color: #fff;
+    background: #0C4DA2;
+}
+
+#content .ad_zone {
+    clear: both;
+    float: none;
+    height: 400px;
+    background-image: url(/resources/img/ad.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#content .ad_zone .panel {
+    clear: both;
+    float: none;
+    width: 1100px;
+    height: 400px;
+    margin: 0 auto;
+}
+
+#content .ad_zone .panel dl {
+    padding-top: 150px;
+    text-align: center;
+}
+
+#content .ad_zone .panel dl dt {
+    color: #fff;
+    font-size: 28px;
+    margin-bottom: 4px;
+}
+
+
+#content .ad_zone .panel dl a {
+    display: block;
+    width: 150px;
+    padding: 4px 0;
+    margin: 10px auto;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+    background: transparent;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    transition: all 0.3s;
+}
+
+#content .ad_zone .panel dl a:hover,
+#content .ad_zone .panel dl a:focus {
+    display: block;
+    color: rgb(34, 105, 197);
+    background: #fff;
+}
+
+#content .qreserch_area {
+    padding: 40px 0;
+}
+
+#content .qreserch_area ul {}
+
+#content .qreserch_area li {
+    float: left;
+    width: 210px;
+    margin-right: 10px;   
+    /* background: #505050; */
+
+}
+
+#content .qreserch_area li:first-child {
+    margin-right: none;
+}
+
+/* 같은 ul안에 같은 li들이지만 다른 css사용으로 퍼스트차일드 사용 */
+#content .qreserch_area li a {
+    position: relative;
+    display: block;
+    height: 250px;    
+    opacity: 0.7;
+    transition:opacity 0.3s;
+}
+
+#content .qreserch_area li a .item_box{
+	width:210px;
+	height:160px;
+	overflow:hidden;	
+}
+#content .qreserch_area li a .item_box img{
+	transform: scale(1);	
+	transition:transform 0.5s;
+}
+
+#content .qreserch_area li a:hover,
+#content .qreserch_area li a:focus {
+    opacity: 1;
+}
+#content .qreserch_area li a .item_box img:hover,
+#content .qreserch_area li a .item_box img:focus{
+	transform: scale(1.2);	
+}
+
+#content .qreserch_area li:first-child a {
+    background: #0C4DA2;
+    opacity: 1;
+}
+
+#content .qreserch_area li:first-child a dl dt {
+    padding-left: 20px;
+    font-size: 22px;
+    color: #fff;
+    letter-spacing: 0.3px;
+}
+
+#content .qreserch_area li:first-child a dl span {
+    display: block;
+
+}
+
+#content .qreserch_area li:first-child a dl dd {
+    bottom: 5px;
+    right: 10px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #fff;
+}
+
+#content .qreserch_area dl {
+    padding-top: 18px;
+}
+
+#content .qreserch_area dl dt {
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: -0.3px;
+
+}
+
+#content .qreserch_area dl dd {
+    position: absolute;
+    bottom: 0;
+    font-size: 12px;
+    color: #888;
+
+}
+
+
+
+#footer {
+    background-color: #282828;
+    font-size: 12px;
+    color: #8c8c8c;
+    margin-top: 40px;
+}
+
+#footer .footer_inner {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 50px 10px;
+}
+
+#footer .footer_inner .footer_logo,
+#footer .footer_inner .footer_text {
+    display: inline-block;
+}
+
+#footer .footer_inner .footer_logo {
+    width: 287px;
+}
+
+#footer .footer_inner .footer_logo img {
+    width: 180px;
+}
+
+#footer .footer_inner .footer_text p a {
+    color: #dcdcdc;
+    font-weight: bold;
 }
