--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -467,7 +467,8 @@ body {
 }
 .article-list-item__content {
     vertical-align: middle;
-    padding-right: 13px;
+        padding: 5px 0px;
+
 }
 .article-list-item__title {
     display: inline;
@@ -510,6 +511,7 @@ em {
     -o-object-fit: cover;
     object-fit: cover;
     font-family: "object-fit: cover;";
+    margin: 0px 0px 0px -13px;
     
 }
 
@@ -695,13 +697,13 @@ form {
     display: block;
     clear: both;
 }
-a.button {
+input.button {
     display: inline-block;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     text-align: center;
 }
-a.button:hover{
+button.button:hover{
 	border : 1px solid black;
 }
 .article-list-paging__button {
@@ -711,6 +713,7 @@ a.button:hover{
     border-radius: 4px;
     background-color: #fff;
     border: 1px solid #dddfe4;
+    color: inherit;
 }
 a {
     text-decoration: none;
