--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -61,8 +61,7 @@
 	display: flex;
 	-webkit-flex-direction: column;
 	flex-direction: column;
-	margin-left: 24rem;
-	margin-right: auto;
+	margin: 0 auto;
 }
 
 .content-wrapper {
